# aws-assume-role

./: .gitignore  README.md  aws-assume-role.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml
aws_assume_role/: main.py
